= MagLev Change Log

== Changes for 22891  2010-02-18

* Fix Trac 662, 663, 665, 666
* Impement  ENV.delete
* Indexing is fixed: clean up and turn on examples/persistence/indexing
* Add Socket::Constants
* Major underlying changes to AIO in GemStone -- replaces the use of 
  POSIX asynchronous IO with our own thread-based IO system for writing tranlogs

== Changes for 22873  2010-02-15

* Switch from RbYaml to libyaml + Psych
* Added Enumerable#each_slice (but no Enumerator support).
* Fix Trac 664, 610
* Fix Trac 483, 473, 457, 422 (fixed by a previous release)

== Changes for 22816  2010-02-02

* Replaced previously patched irb with unpatched irb.rb and irb library
* Fix Trac 657, 659, 661
* Fix assertion failure in Ruby 'break' in 'slow' build.
* persistence-api documentation: fixed bogus references to
  Module#persistable=
* Fix Trac 657 in implementation of class variables
* Test::Unit now works
* Fix Enumerable#count for no-parameter case

== Changes for 22804  2010-01-29

* Fix Trac 656 in implemention of eval
* Fix Trac 654,655 in the IR generator phase of Ruby parser
* Webrick updated with security patch from 1.8.6p388
* Fixed --stone option to maglev-ruby
* Added Maglev::System.stone_name to return the name of the stone the VM is
  connected to.
* More fixes to eval for constant resolution
* Improve commit performance by changes in AIO usage
* Improve tranlog write performance by avoiding unnecessary fsync() calls
* Added new stats StnAioFsyncCount and StnAioTimeInFsyncMs

== Changes for 22780  2010-01-22

* Fix Trac 652
* Fix Trac 653 in Lexer
* Various FFI
* Fix infinite loop on Sparc in high-res profiling
* Optimize Integer>>\\  to not compute unneeded quotient.
* In topaz, SET CLASS with no arg will print name of the current class
* Fix retry of timer thread connect in socketprim.c
* Fixes in GS for SOX complience
* Fixes for FFI alignment of nested structs and unions
* Fixes for RVM compliance

== Changes for 22725  2010-01-15
