@@ -104,6 +104,7 @@ syntaxErrorsTest.rb
 GprofTest.rb
 RubyUtilsTest.rb
 IdentitySetIndexingTest.rb
+Ruby_1_8_7_tests.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
